sandbox/output
MedicineClashTest.java:42: error: incompatible types: List<Customer> cannot be converted to Set<Customer>
        assertEquals(new ArrayList<Customer>(), MedicineClash.of(customers));
                                                                 ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
